Change task input placeholder text to '例：食事'
Updated task input placeholder text for clarity.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <form id="addForm" class="row" autocomplete="off">
         <div class="grow">
           <label class="label" for="titleInput">タスク</label>
-          <input id="titleInput" class="input" type="text" maxlength="120" placeholder="例：WISS原稿の図を差し替える" required />
+          <input id="titleInput" class="input" type="text" maxlength="120" placeholder="例：食事" required />
         </div>
 
         <div class="col">
@@ -86,3 +86,4 @@
   <script src="./app.js" defer></script>
 </body>
 </html>
+
